--- a/index.html
+++ b/index.html
@@ -49,10 +49,22 @@
     </style>
 </head>
 <body>
-    <div class="container">
+  <div class="container">
         <h1>利用規約に同意しますか？</h1>
-        <img src="your-image.jpg" alt="image">
-        
+
+        <!-- 利用規約表示 -->
+        <div class="terms">
+            <p>0. この以下の規約は購入者、利用者が同意をしたのち適用される。同意しない場合は、同意しないボタンを押すこと。</p>
+            <p>1. 同意をする場合は以下の全ての規約の内容に同意したものとする。</p>
+            <p>2. このSHOPが金銭に関わる詐欺を行った場合は、速やかに警察に連絡し、開示請求を行うこと。</p>
+            <p>3. 料金の支払いは、全てPayPayで先払いをすること。その他の支払い方法の場合は、手数料として5%を貰います。</p>
+            <p>4. 購入した商品に関して、管理者が関わる商品の不備以外の理由で払い戻しはできない。</p>
+            <p>5. 購入した商品により購入者に起こりうる問題に関しては、このSHOPは責任を取りません。あくまでも商品の使用などは自己責任です。</p>
+            <p>6. この規約はSHOPの管理者により更新される場合がある。</p>
+            <p>7. 管理者が支払いに関する送金を受け取った上で商品を渡せない場合は管理者から払い戻しを行わなければならない。</p>
+            <p>8. 送金後手順としては、送金した証拠としてのスクリーンショットを撮りGoogleフォームにメールアドレスと購入した商品名とスクリーンショットの画像をアップロードし送ることとする。その後管理者がメールアドレス宛に商品を送ります。</p>
+            <p>最終更新 2月14日 19時15分</p>
+        </div>
         <div class="button-container">
             <button class="agree-button" onclick="redirectToMainPage()">同意する</button>
             <button class="disagree-button" onclick="redirectToDisagreePage()">同意しない</button>
