--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 </head>
 <body>
   <div class="container">
-        <h1>利用規約に同意しますか？</h1>
+        <h1>以下の規約を全て読み、規約に同意しますか？</h1>
 
         <!-- 利用規約表示 -->
         <div class="terms">
